--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,9 @@
     "dcec",
     "Piazolla",
     "Piazzolla",
-    "Raleway"
+    "Raleway",
+    "Kalina",
+    "redLetter"
   ],
   "liveServer.settings.port": 5551
 }
